--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -73,7 +73,43 @@ a:active {
 	padding-left: 20px;
 	padding-right: 20px;
 	margin-bottom: 20px;
+}
 
+.portfolio {
+
+	border: thin;
+	border-color: gray;
+	position: relative;
+	left: 7%;
+ 	top: 100px;
+	height: 50%;
+	max-width: 650px;
+	background-color: white;
+	float: left;
+	z-index: -1;
+	position: 100px 100px;
+	padding-left: 20px;
+	padding-right: 20px;
+	margin-bottom: 20px;
+
+}
+
+.contact {
+
+	border: thin;
+	border-color: gray;
+	position: relative;
+	left: 7%;
+ 	top: 100px;
+	height: 50%;
+	max-width: 650px;
+	background-color: white;
+	float: left;
+	z-index: -1;
+	position: 100px 100px;
+	padding-left: 20px;
+	padding-right: 20px;
+	margin-bottom: 20px;
 
 }
 
@@ -116,6 +152,18 @@ a:active {
 
 }
 
+
+.portfolioimage {
+
+	width: 26%;
+	height: 26%;
+	padding: 0px 20px 20px 0;
+	float: center;
+	position: relative;
+
+
+}
+
 .header {
 	position: absolute;
 	top: 0;
@@ -131,7 +179,8 @@ a:active {
 
 .footer {
 	position: absolute;
-	bottom: 0;
+	bottom: 0; 
+	left: 0px;
 	text-align: center;
 	width: 100%;
 	background-color: #666666;
@@ -149,10 +198,41 @@ a:active {
 body {
 
 	background-image: url("../images/concrete_seamless.png");
+	display: :flex;
+	flex-direction: column;
+}
+
+.textinput {
+
+	width: 100%;
+
+}
+
+.messagebox {
+
+	width: 100%;
+	height: 150px;
 }
 
 .paragraph {
 
 	position: relative;
 	white-space: normal; 
+}
+
+.submitbutton {
+
+	height: 30px;
+	width: 85px;
+	margin-top: 5%;
+	margin-bottom: 5%;
+	background-color: #4aaaa5;
+	border-style: solid;
+	border-color: #4aaaa5;
+
+}
+/*Code for future flex ability*/
+.content {
+
+	
 }
