missing include code on contact page

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -252,8 +252,44 @@ body {
 
 }*/ 
 
-/*Code for future flex ability*/
-.content {
+/* ALL @MEDIA Code to handle responsive below*/
 
-	
+@media only screen and (max-width: 980px) {
+    .aboutMe {
+        background-color: lightblue;
+        max-width: 100%;
+    }
+
+       .connectme {
+        background-color: lightblue;
+        max-width: 100%;
+    }
+}
+
+@media only screen and (max-width: 768px) {
+    .aboutMe {
+        background-color: lightgreen;
+        max-width: 100%;
+    }
+
+	.connectme {
+        background-color: lightgreen;
+        max-width: 100%;
+        
+
+}
+
+
+@media only screen and (max-width: 640px) {
+    .aboutMe {
+        background-color: lightpink;
+        max-width: 100%;
+    }
+
+ .connectme {
+        background-color: lightpink;
+        max-width: 100%;
+    }
+
+
 }
